--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "next": "^15.1.2",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "file-loader": "^6.2.0",
     "postcss": "^8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
